# CVCutter

./: FORMS_API_GUIDE.md  README.md  YOUTUBE_UPLOAD_WORKFLOW.md  build_exe.py  create_google_form.py  google_form_connector.py  pdf_parser.py  pyproject.toml  requirements.txt  run_youtube_workflow.py  sample_form_responses.csv  upload_metadata.json  video_mapper.py  youtube_uploader.py
docs/: developer_manual.md  user_manual.md
src/cvcutter/: app.py  config_manager.py  create_google_form.py  detect_performances.py  gemini_utils.py  google_form_connector.py  pdf_parser.py  run_youtube_workflow.py  video_mapper.py  video_processor.py  video_utils.py  yolo_tracker.py  youtube_uploader.py
